Fix color contrast of red error messages in dark mode

--- a/client/scss/components/_messages.status.scss
+++ b/client/scss/components/_messages.status.scss
@@ -4,7 +4,7 @@
   }
 
   &.failure {
-    color: theme('colors.critical.200');
+    color: theme('colors.text-error');
   }
 
   &.warning {
