--- a/client/scss/components/forms/_required-mark.scss
+++ b/client/scss/components/forms/_required-mark.scss
@@ -1,5 +1,5 @@
 .w-required-mark {
-  color: theme('colors.critical.200');
+  color: theme('colors.text-error');
   margin-inline-start: 0.25ch;
 
   @include media-breakpoint-up(sm) {
